...
            </objects>
            <point key="canvasLocation" x="58.5" y="136.5"/>
        </scene>
        <!--Projects-->
        <scene sceneID="YKG-dZ-stZ">
            <objects>
                <viewController title="Projects" id="TrQ-Lo-jxW" customClass="ProjectsVC" customModule="Rex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="7gF-MC-rHu">
                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Bxz-hz-QMf">
                                <rect key="frame" x="28" y="245" width="78" height="25"/>
...
            </objects>
            <point key="canvasLocation" x="688" y="219"/>
        </scene>
        <!--Create new project-->
        <scene sceneID="U7t-57-JYD">
            <objects>
                <viewController title="Create new project" id="lf3-G8-Rd3" customClass="CreateProjectVC" customModule="Rex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="SFP-EQ-AIH">
                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7z8-kJ-0lR">
                                <rect key="frame" x="355" y="13" width="81" height="32"/>
...
